test/patterns_bak/s0217_contains_duplicate/hafis/starchat/jml_syntax_checking.txt
./test/s0217_contains_duplicate/hafis/starchat/Solution.java:17: error: -> expected
//@ ensures(() ==> ());
              ^
./test/s0217_contains_duplicate/hafis/starchat/Solution.java:17: error: Token ==> does not introduce an expression
//@ ensures(() ==> ());
               ^
./test/s0217_contains_duplicate/hafis/starchat/Solution.java:17: error: -> expected
//@ ensures(() ==> ());
                     ^
./test/s0217_contains_duplicate/hafis/starchat/Solution.java:17: error: ')' expected
//@ ensures(() ==> ());
                      ^
4 errors
